# Catch2

./: meson.build
.github/workflows/: linux-meson-builds.yml
src/catch2/: meson.build
tests/: meson.build
